tests/baselines/reference/moduleAugmentationGlobal8_1(strict=true).errors.txt
moduleAugmentationGlobal8_1.ts(2,5): error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
moduleAugmentationGlobal8_1.ts(2,5): error TS2670: Augmentations for the global scope should have 'declare' modifier unless they appear in already ambient context.
moduleAugmentationGlobal8_1.ts(3,30): error TS7008: Member 'x' implicitly has an 'any' type.


==== moduleAugmentationGlobal8_1.ts (3 errors) ====
    namespace A {
        global {
        ~~~~~~
!!! error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
        ~~~~~~
!!! error TS2670: Augmentations for the global scope should have 'declare' modifier unless they appear in already ambient context.
            interface Array<T> { x }
                                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
        }
    }
    export {}
    